Reducing redundancy